# tou_calculator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  legacy_removal_plan.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
docs/: api_zh.md
examples/: billing_cycle_examples.py  billing_examples.py  csv_import.py  household.py  plan_comparison.py  quick_start.py  usage_examples.py
src/taipower_tou/: __init__.py  billing.py  tariff.py
src/taipower_tou/data/: plans_summary.md
src/tou_calculator/: __init__.py  billing.py  calendar.py  custom.py  factory.py  models.py  rates.py  tariff.py
src/tou_calculator/data/: plans.json  plans_summary.md
tests/: test_accuracy_validation.py  test_billing.py  test_billing_cycle.py  test_billing_cycle_edge_cases.py  test_calendar.py  test_comprehensive.py  test_custom_stress.py  test_e2e.py  test_entry.py  test_factory.py  test_integration.py  test_production_readiness.py  test_stress.py  test_tariff.py  test_version.py
